Update NuGet source in workflow configuration

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,6 @@ jobs:
       run: |
         dotnet --version
         dotnet nuget push "output/*.nupkg" \
-          --source ${{ env.NUGET_SOURCE }} \
+          --source ${{ env.PRIVATE_NUGET_REPOSITORY_URL }} \
           --api-key ${{ secrets.GITHUB_TOKEN }} \
           --skip-duplicate --no-symbols
